Test and clean up
